[package]
name = "proj_example"
version = "0.1.0"
authors = ["Johannes Drönner <droenner@informatik.uni-marburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.17"

[dependencies.proj]
git = "https://github.com/georust/proj"
features = ["geo-types"]
